Add Dockerfiles, Nginx configuration, and production docker-compose